--- a/code/html/examen/estilos.css
+++ b/code/html/examen/estilos.css
@@ -1,8 +1,17 @@
 .circulo {
-    width: 50px;
-    height: 50px;
-    margin: 10px;
-    background-color: lime;
+    width: 100px;
+    height: 100px;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
     border-radius: 50%;
-    display: absolute;
+    background: #5cb85c;
+}
+
+.circulo {
+    width: 100px;
+    height: 100px;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+    background: #e27713;
 }
